docs/api/qiskit/0.24/qiskit.circuit.library.CCXGate.mdx
---
title: CCXGate
description: API reference for qiskit.circuit.library.CCXGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CCXGate
---

<span id="qiskit-circuit-library-ccxgate" />

# qiskit.circuit.library.CCXGate

<Class id="qiskit.circuit.library.CCXGate" github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/library/standard_gates/x.py" signature="CCXGate(label=None, ctrl_state=None)">
  CCX gate, also known as Toffoli gate.

  **Circuit symbol:**

  ```python
  q_0: ──■──
         │
  q_1: ──■──
       ┌─┴─┐
  q_2: ┤ X ├
       └───┘
  ```

  **Matrix representation:**

  $$
  \begin{split}CCX q_0, q_1, q_2 =
      |0 \rangle \langle 0| \otimes I \otimes I + |1 \rangle \langle 1| \otimes CX =
     \begin{pmatrix}
          1 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
          0 & 1 & 0 & 0 & 0 & 0 & 0 & 0\\
          0 & 0 & 1 & 0 & 0 & 0 & 0 & 0\\
          0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\
          0 & 0 & 0 & 0 & 1 & 0 & 0 & 0\\
          0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\
          0 & 0 & 0 & 0 & 0 & 0 & 1 & 0\\
          0 & 0 & 0 & 1 & 0 & 0 & 0 & 0
      \end{pmatrix}\end{split}
  $$

  <Admonition title="Note" type="note">
    In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_2 and q\_1. Thus a textbook matrix for this gate will be:

    ```python
         ┌───┐
    q_0: ┤ X ├
         └─┬─┘
    q_1: ──■──
           │
    q_2: ──■──
    ```

    $$
    \begin{split}CCX\ q_2, q_1, q_0 =
        I \otimes I \otimes |0 \rangle \langle 0| + CX \otimes |1 \rangle \langle 1| =
        \begin{pmatrix}
            1 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
            0 & 1 & 0 & 0 & 0 & 0 & 0 & 0\\
            0 & 0 & 1 & 0 & 0 & 0 & 0 & 0\\
            0 & 0 & 0 & 1 & 0 & 0 & 0 & 0\\
            0 & 0 & 0 & 0 & 1 & 0 & 0 & 0\\
            0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\
            0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\
            0 & 0 & 0 & 0 & 0 & 0 & 1 & 0
        \end{pmatrix}\end{split}
    $$
  </Admonition>

  Create new CCX gate.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.library.CCXGate.__init__" name="__init__" signature="__init__(label=None, ctrl_state=None)">
    Create new CCX gate.
  </Function>

  ## Methods

  |                                                                                                                                                 |                                                                          |
  | ----------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.library.CCXGate.__init__ "qiskit.circuit.library.CCXGate.__init__")(\[label, ctrl\_state])                         | Create new CCX gate.                                                     |
  | [`add_decomposition`](#qiskit.circuit.library.CCXGate.add_decomposition "qiskit.circuit.library.CCXGate.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.library.CCXGate.assemble "qiskit.circuit.library.CCXGate.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.library.CCXGate.broadcast_arguments "qiskit.circuit.library.CCXGate.broadcast_arguments")(qargs, cargs) | Validation and handling of the arguments and its relationship.           |
  | [`c_if`](#qiskit.circuit.library.CCXGate.c_if "qiskit.circuit.library.CCXGate.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`control`](#qiskit.circuit.library.CCXGate.control "qiskit.circuit.library.CCXGate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])         | Controlled version of this gate.                                         |
  | [`copy`](#qiskit.circuit.library.CCXGate.copy "qiskit.circuit.library.CCXGate.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.library.CCXGate.inverse "qiskit.circuit.library.CCXGate.inverse")()                                                 | Return an inverted CCX gate (also a CCX).                                |
  | [`is_parameterized`](#qiskit.circuit.library.CCXGate.is_parameterized "qiskit.circuit.library.CCXGate.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.library.CCXGate.mirror "qiskit.circuit.library.CCXGate.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`power`](#qiskit.circuit.library.CCXGate.power "qiskit.circuit.library.CCXGate.power")(exponent)                                               | Creates a unitary gate as gate^exponent.                                 |
  | [`qasm`](#qiskit.circuit.library.CCXGate.qasm "qiskit.circuit.library.CCXGate.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.library.CCXGate.repeat "qiskit.circuit.library.CCXGate.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.library.CCXGate.reverse_ops "qiskit.circuit.library.CCXGate.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`to_matrix`](#qiskit.circuit.library.CCXGate.to_matrix "qiskit.circuit.library.CCXGate.to_matrix")()                                           | Return a numpy.array for the CCX gate.                                   |
  | [`validate_parameter`](#qiskit.circuit.library.CCXGate.validate_parameter "qiskit.circuit.library.CCXGate.validate_parameter")(parameter)       | Gate parameters should be int, float, or ParameterExpression             |

  ## Attributes

  |                                                                                                                       |                                                                               |
  | --------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`ctrl_state`](#qiskit.circuit.library.CCXGate.ctrl_state "qiskit.circuit.library.CCXGate.ctrl_state")                | Return the control state of the gate as a decimal integer.                    |
  | [`decompositions`](#qiskit.circuit.library.CCXGate.decompositions "qiskit.circuit.library.CCXGate.decompositions")    | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.library.CCXGate.definition "qiskit.circuit.library.CCXGate.definition")                | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.library.CCXGate.duration "qiskit.circuit.library.CCXGate.duration")                      | Get the duration.                                                             |
  | [`label`](#qiskit.circuit.library.CCXGate.label "qiskit.circuit.library.CCXGate.label")                               | Return gate label                                                             |
  | [`num_ctrl_qubits`](#qiskit.circuit.library.CCXGate.num_ctrl_qubits "qiskit.circuit.library.CCXGate.num_ctrl_qubits") | Get number of control qubits.                                                 |
  | [`params`](#qiskit.circuit.library.CCXGate.params "qiskit.circuit.library.CCXGate.params")                            | Get parameters from base\_gate.                                               |
  | [`unit`](#qiskit.circuit.library.CCXGate.unit "qiskit.circuit.library.CCXGate.unit")                                  | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.circuit.library.CCXGate.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.library.CCXGate.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.CCXGate.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.library.CCXGate.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### control

  <Function id="qiskit.circuit.library.CCXGate.control" name="control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Controlled version of this gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.CCXGate.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### ctrl\_state

  <Function id="qiskit.circuit.library.CCXGate.ctrl_state" name="ctrl_state" signature="property ctrl_state">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Function>

  ### decompositions

  <Function id="qiskit.circuit.library.CCXGate.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.circuit.library.CCXGate.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Function>

  ### duration

  <Function id="qiskit.circuit.library.CCXGate.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.CCXGate.inverse" name="inverse" signature="inverse()">
    Return an inverted CCX gate (also a CCX).
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.CCXGate.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Function id="qiskit.circuit.library.CCXGate.label" name="label" signature="property label">
    Return gate label

    **Return type**

    `str`
  </Function>

  ### mirror

  <Function id="qiskit.circuit.library.CCXGate.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### num\_ctrl\_qubits

  <Function id="qiskit.circuit.library.CCXGate.num_ctrl_qubits" name="num_ctrl_qubits" signature="property num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    int
  </Function>

  ### params

  <Function id="qiskit.circuit.library.CCXGate.params" name="params" signature="property params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    list

    **Raises**

    **CircuitError** – Controlled gate does not define a base gate
  </Function>

  ### power

  <Function id="qiskit.circuit.library.CCXGate.power" name="power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.circuit.library.CCXGate.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.CCXGate.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.CCXGate.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.CCXGate.to_matrix" name="to_matrix" signature="to_matrix()">
    Return a numpy.array for the CCX gate.
  </Function>

  ### unit

  <Function id="qiskit.circuit.library.CCXGate.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.CCXGate.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

